// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handleAdvertisingStart error 1`] = `
Array [
  Array [
    "advertisingStart: Error: mock-error",
  ],
]
`;

exports[`should handleAdvertisingStart error 2`] = `
Object {
  "calls": Array [],
  "instances": Array [],
}
`;

exports[`should handleAdvertisingStart error 3`] = `
Object {
  "calls": Array [],
  "instances": Array [],
}
`;

exports[`should handleAdvertisingStart error 4`] = `
Array [
  Array [
    "advertisingStart: Error: mock-error",
  ],
]
`;

exports[`should handleAdvertisingStart error 5`] = `
Object {
  "calls": Array [],
  "instances": Array [],
}
`;

exports[`should handleAdvertisingStart success 1`] = `
Array [
  Array [
    [Function],
  ],
]
`;

exports[`should handleAdvertisingStart success 2`] = `
Array [
  Array [
    undefined,
  ],
]
`;

exports[`should handleAdvertisingStart success 3`] = `
Array [
  Array [
    "advertisingStart: success",
  ],
]
`;

exports[`should handleAdvertisingStart success 4`] = `
Object {
  "calls": Array [
    Array [
      Array [
        undefined,
      ],
    ],
  ],
  "instances": Array [
    [Function],
  ],
}
`;
